fixes #46 containerize kyuubi server with yarn